--- a/sucess.html
+++ b/sucess.html
@@ -13,7 +13,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/modal.css">
-    <!-- <link rel="stylesheet" href="css/stylestore.css"> -->
+    <link rel="stylesheet" href="css/stylestore.css">
 
     <!-- Font Awesome icons -->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -47,12 +47,12 @@
 
             <!-- icon do carrinho do menu -->
             <div class="col-1 text-end">
-                <a href="shopping cart.html"><img src="img/shopping-cart.png" class="iconsmenu"></a>
+                <a href="cart.html" ><img src="img/shopping-cart.png" class="iconsmenu cart-label-img"></a>
+                <p class="cart-label-text" id="cart-label-text"></p>
             </div>
-
             <!-- icon para conta do utilizador -->
-            <div class="col-1 text-center">
-                <a href="user.html"><img src="img/add-user.png"  class="iconsmenu"></a>
+            <div class="col-2 text-center" id="UserName">
+                <a href="user.html"><img src="img/add-user.png"  class="iconsmenu icon-util-posi"></a>
             </div>
         </div>
     </nav>
@@ -77,7 +77,7 @@
           </div>
         </div>
 
-    <footer class="bg-dark text-white mt-5">
+    <footer class="bg-dark text-white mt-5 fixed-bottom">
         <hr>
         <div class="socials-container">
             <a class="socials-icon" href="https://www.facebook.com/CesaeDigital" target="_blank"><i
@@ -95,6 +95,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="js/cart.js"></script>
+    <script src="js/userinfo.js"></script>
+
 </body>
 
 </html>
