--- a/user.html
+++ b/user.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cart</title>
+    <title>RVS Clothing</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/stylestore.css">
     <link rel="stylesheet" href="css/modal.css">
+
+    <!-- Font Awesome icons -->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -61,7 +64,7 @@
 
     <!-- Banner GIF -->
     <div class="container">
-        <a href="sale.html"><img src="img/Design sem nome (3).gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
+        <a href="sale.html"><img src="img/Banner final.gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
     </div>
     <br>
 
@@ -98,21 +101,18 @@
 
 
 
-    <footer class="bg-dark text-white mt-5">
+    <footer class="bg-dark text-white mt-5 fixed-bottom">
         <hr>
         <div class="socials-container">
-            <!-- Linkedin -->
-            <a class="socials-icon" href="https://www.linkedin.com/in/goncalo-szabo-rio/" target="_blank"
-                aria-hidden="true"><i class="fab fa-linkedin-in"></i></a>
-            <!-- Github -->
-            <a class="socials-icon" href="https://github.com/SzaboRIO/" target="_blank" aria-hidden="true"><i
-                    class="fab fa-github"></i></a>
-            <!-- Mail -->
-            <a class="socials-icon" href="mailto:goncaloszabo@gmail.com" target="_blank" aria-hidden="true"><i
-                    class="fa-regular fa-envelope"></i></a>
+            <a class="socials-icon" href="https://www.facebook.com/CesaeDigital" target="_blank"><i
+                    class="fa-brands fa-facebook"></i></a>
+            <a class="socials-icon" href="https://www.instagram.com/cesae.digital/" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a class="socials-icon" href="https://www.tiktok.com/@ocesaedigital" target="_blank"><i
+                    class="fa-brands fa-tiktok"></i></a>
+            <a class="socials-icon" href="mailto:geral@rvs.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
         </div>
-        <!-- Footer description -->
-        <p class="text-center">&copy; 2025 RVS</p>
+        <p class="text-center">&copy; 2025 RVS Clothing</p>
     </footer>
 
     <!-- Bootstrap script -->
