--- a/men.html
+++ b/men.html
@@ -114,17 +114,17 @@
                     <div class="size-selector">
                         <label class="size-label"></label>
                         <div class="size-options">
-                            <button class="size-button" onclick="selectSize(this)">P</button>
+                            <button class="size-button" onclick="selectSize(this)">S</button>
                             <button class="size-button" onclick="selectSize(this)">M</button>
-                            <button class="size-button" onclick="selectSize(this)">G</button>
-                            <button class="size-button" onclick="selectSize(this)">GG</button>
+                            <button class="size-button" onclick="selectSize(this)">L</button>
+                            <button class="size-button" onclick="selectSize(this)">XL</button>
                         </div>
                     </div>
                     <div class="modal-price" id="modal-price"></div>
                 </div>
                 
                 <button class="add-to-cart" id="add-to-cart">
-                    Adicionar ao Carrinho
+                      Add to cart
                 </button>
             </div>
         </div>
